# strands-orchestrator

./: README.md  pyproject.toml
src/strands_orchestrator/: __init__.py  config.py  container.py  factory.py  mcp_connector.py  mode_manager.py  model_factory.py  pool.py  protocols.py  state.py  types.py
src/strands_orchestrator/hooks/: __init__.py  auth_token.py  consent_hook.py  event_bridge.py  inbox_hook.py  interrupt_hook.py
src/strands_orchestrator/sources/: __init__.py  mongodb.py  yaml_source.py
tests/: conftest.py  test_config.py  test_container.py  test_mode_manager.py  test_model_factory.py  test_protocols.py  test_state.py
